Filter search results on From/To address, and fix some case folding issues
